[package]
name = "little-a-map"
version = "0.11.3"
repository = "https://github.com/AndrewKvalheim/little-a-map"
categories = ["command-line-utilities"]
keywords = ["minecraft"]
description = "Players can have little a map—if they've surveyed the area in-game. This tool renders a composite of player-created map items with the goal of minimizing external effects on survival gameplay."
authors = ["Andrew Kvalheim <Andrew@Kvalhe.im>"]
license = "GPL-3.0-or-later"
readme = "README.md"
edition = "2021"

[lints.clippy]
nursery = "warn"
pedantic = "warn"

[[bin]]
name = "little-a-map"
path = "src/bin/main.rs"
bench = false

[dependencies]
anyhow = { version = "1.0", features = ["backtrace"]}
askama = { version = "0.12", features = ["serde-json"] }
bincode = "1.3"
derivative = "2.1"
env_logger = "0.10.0"
fastanvil = "0.30.0"
fastnbt = "2.4.4"
flate2 = { version = "1.0", features = ["zlib-ng"], default-features = false }
forgiving-semver = { version = "0.11.0", features = ["serde"] }
glob = "0.3"
indicatif = { version = "0.17", features = ["rayon"] }
itertools = "0.12"
log = "0.4"
once_cell = "1.4"
paw = "1.0"
png = "0.17"
rayon = "1.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = { version = "3.0", features = ["json"] }
serde-query = "0.2"
structopt = { version = "0.3", features = ["paw"] }
zstd = "0.13"

[dev-dependencies]
criterion = "0.5"
image = "0.24"
tempfile = "3.3"
test-context = "0.1"

[[bench]]
name = "default"
harness = false
