[package]
name = "lib"
version = "0.0.0"
edition = "2018"
publish = false

[dependencies]
anyhow = "1.0"
askama = "0.10"
bincode = "1.3"
derivative = "2.1"
fastanvil = "0.17"
fastnbt = "0.17"
filetime = "0.2"
flate2 = { version = "1.0", features = ["zlib-ng-compat"], default-features = false }
glob = "0.3"
indicatif = { version = "0.15", features = ["rayon"] }
once_cell = "1.4"
png = "0.16"
rayon = "1.3"
semver = { version = "0.11", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = { version = "1.6", features = ["json"] }
serde-query = "0.1"
