[package]
name = "lib"
version = "0.0.0"
edition = "2021"
publish = false

[dependencies]
anyhow = "1.0"
askama = { version = "0.11", features = ["serde-json"] }
bincode = "1.3"
derivative = "2.1"
fastanvil = "0.26.0"
fastnbt = "2.3.2"
filetime = "0.2"
flate2 = { version = "1.0", features = ["zlib-ng-compat"], default-features = false }
forgiving-semver = { version = "0.11.0", features = ["serde"] }
glob = "0.3"
indicatif = { version = "0.17", features = ["rayon"] }
once_cell = "1.4"
png = "0.17"
rayon = "1.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = { version = "2.1", features = ["json"] }
serde-query = "0.1"

[dev-dependencies]
tempfile = "3.3"
test-context = "0.1"
